<resources>
    <string name="app_name">GoApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_develoepr">Develoepr</string>
    <string name="desc_image">Image</string>
    <string name="welcome">Silahkan login untuk memakai aplikasi</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create new Account</string>
    <string name="bio">Biografi</string>
    <string name="nav_website">Website</string>
    <string name="menu_email">Email</string>
    <string name="title_nav_info">Info</string>
    <string name="title_nav_menu">Menu</string>
</resources>