<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/img_sign_in_new">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="66dp"
            android:background="@drawable/logotext"
            android:contentDescription="@string/desc_image" />

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_logo"
            android:layout_marginBottom="50dp"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_welcome"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="@dimen/fab_margin"
            android:autofillHints="@string/username"
            android:drawableStart="@drawable/ic_username"
            android:drawablePadding="12dp"
            android:ellipsize="end"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_username"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="@dimen/fab_margin"
            android:autofillHints="@string/password"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="12dp"
            android:ellipsize="end"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_password"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="@dimen/fab_margin"
            android:background="@drawable/btn_sign_in"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_login"
            android:layout_marginBottom="@dimen/fab_margin"
            android:text="@string/create_new_account"
            android:textAlignment="center" />

    </RelativeLayout>

</ScrollView>